--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('../public/background.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 
 }
 
-@media screen and (max-width:'800px') {
+@media  (min-width: 574px) {
   body{
-    background: none;
+    background-image: url('../public/background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+}
+@media  (max-width: 574px) {
+  body{
+    background-image: url('../public/background.jpg');
+    background-size: 800px;
+    background-position: center;
+    background-repeat:repeat;
   }
 }
 code {
